objects/Community_Access__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Community_Administration_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Administration Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>News_CRED_Administration_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>News CRED Administration Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Registration_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Registration Access</label>
        <type>Checkbox</type>
    </fields>
    <label>Community Access</label>
</CustomObject>